--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -96,7 +96,7 @@
                 {# Etapes restantes a valider #}
                 <div class="well etapes-circuit">
                     {% if edit %}<button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button>{% endif %}
-                    <div class="text-center"><h4 title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer">Etape à venir</h4></div>
+                    <div class="text-center"><h4 title="merci de renseigner au moins un utilisateur dans l'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l'étape vide ou de la supprimer">Etape à venir</h4></div>
 
                     {% if etape.countUserPacksUsers() > 3 %}
                         <span class="glyphicon glyphicon-user etape-groupe" title="Cliquez pour voir les utilisateurs de l'étape"></span>
