--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -168,12 +168,12 @@
         /*
          * Initialisations
          */
-        $('.first').popover({
+        /*$('.first').popover({
             trigger: 'hover',
             container: 'body',
             content: 'Ajouter une étape',
             placement: 'bottom'
-        });
+        });*/
         aff_button_valider();
 //        $('.list-validants').hide();
         scrollFrisque();
