--- a/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
@@ -60,9 +60,12 @@
                                 <button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button>
                                 <button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button>
                             </div>
-                            <div class="{#col-lg-2 #}text-center  div-btn-ajout-etape">
-                                <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+                            <div class="text-center div-btn-ajout-etape">
+                                <button type="button" class="btn btn-circle-lg btn-info first" id="addetape"><span class="glyphicon glyphicon-plus"></span> </button>
                             </div>
+                            {#<div class="text-center  div-btn-ajout-etape">
+                                <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+                            </div>#}
                         </div>
                     </div>
                 </div>
@@ -112,7 +115,7 @@
             function scrollFrisque () {
                 var widthLine = $('#circuit_main').css('width');
                 $('#circuit_etapes').css('width', widthLine);
-                var widthScroll = $('.etapes-circuit').length*300 + 250;
+                var widthScroll = $('.etapes-circuit').length * 292 + 143;
                 $('#circuit_with_js').css('width', widthScroll);
 //            console.log($('.etapes-circuit').length + ' ' + 'widthScroll : ' + widthScroll);
             }
@@ -174,18 +177,70 @@
                 /*
                  A chaque fois qu'on clique sur le bouton bleu une nouvelle etape de validation se crée
                  */
+                $('.first').popover('destroy');
+                $('.dyn').popover('destroy');
                 $(this).parent().remove();
+                $('.popover').remove();
 
                 $('#contetapes').append('' +
                 '<div class="well etapes-circuit"><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" required="required" title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
-                '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button></div>');
+                '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-circle-lg btn-info dyn" id="addetape"><span class="glyphicon glyphicon-plus"></span></button></div>');
+//                '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button></div>');
 
-                $("select.selusers").select2();
+                $('.dyn').popover('destroy');
+                $('.dyn').popover({
+                    trigger: 'hover',
+                    container: 'body',
+                    content: 'Ajouter une étape',
+                    placement: 'bottom'
+                });
+//                $("select.selusers").select2();
 
                 scrollFrisque();
+                function formatState (state) {
+
+                    if (!state.id) { return state.text; }
+                    var tabType = state.id.split('-');
+
+                    if(tabType[0] == 'user')
+                    {
+                        return '<span><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;'+ state.text+'</span>';
+                    }
+                    else{
+                        return '<span data-toggle="popover" style="display: block" data-id="'+tabType[1]+'"><i class="fa fa-group"></i>&nbsp;&nbsp;'+ state.text+'</span>';
+                    }
+
+                };
+
+
+                $("select.selusers").select2({
+                    formatResult: formatState,
+                    formatSelection:formatState
+
+                });
+
+
+
+                initPopover();
+                $(".selusers").on("select2-selecting", function () {
+                    $('[data-toggle="popover"]').popover('destroy');
+                    initPopover();
+
+                    //alert('select')
+                });
+
+                $(".selusers").on("select2-close", function () {
+                    //alert('close')
+                    initPopover();
+
+                });
+                $(".selusers").on("select2-open", function () {
+                    initPopover();
+
+                });
                 creerFleches();
 
-                $('.list-validants').hide();
+//                $('.list-validants').hide();
 
             });
 
