--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
@@ -29,5 +29,6 @@
 
     </tbody>
 </table>
+{#
 <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
-<link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+<link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>#}
