Correction affichage liste des certificats.

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -237,6 +237,7 @@
             console.log('nomcertif : ' + nomcertif);
             var element = document.createElement('option');
             element.setAttribute('value', i);
+            nomcertif = nomcertif.substring(nomcertif.lastIndexOf('-'), -1);
             element.text = nomcertif;
             selectcertif.appendChild(element);
             i = i + 1;
