--- a/src/Sesile/MainBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Profile/show_content.html.twig
@@ -10,4 +10,7 @@
     <p>avatar :
         <img src="{{ asset(upload_path ~ app.user.path) }}" height="60px" width="60px"/>
     </p>
+    <p>Signature :
+        <img src="{{ asset(upload_path_signatures ~ app.user.pathSignature) }}" height="60px" />
+    </p>
 </div>
