--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -18,12 +18,23 @@
     {{ form_label(form.username, 'E-mail') }}
     {{ form_widget(form.username) }}
 </div>
+<br/>
 
+<div class="label_form label-form-input">
+    {{ form_label(form.qualite, 'Qualité') }}
+    {{ form_widget(form.qualite) }}
+</div>
 <br/>
 
 <div class="label_form parcou">
     {{ form_label(form.file) }}
     {{ form_widget(form.file) }}
+</div>
+<br/>
+
+<div class="label_form parcou">
+    {{ form_label(form.fileSignature) }}
+    {{ form_widget(form.fileSignature) }}
 </div>
 <br/>
 
