--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -24,43 +24,83 @@
             <div class="col-md-9">{{ form_widget(form.file) }}</div>
         </div>
         <br>
+        <ul class="nav nav-tabs">
+            <li class="active"><a aria-expanded="true" href="#mail" data-toggle="tab">Mails</a></li>
+            <li class=""><a aria-expanded="false" href="#visa" data-toggle="tab">Visa</a></li>
+            <li class=""><a aria-expanded="false" href="#signature" data-toggle="tab">Signature</a></li>
+        </ul>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade active in" id="mail">
+                <br>
+                {{ form_label(form.textmailnew) }}
+                {{ form_widget(form.textmailnew) }}
 
-        <div class="row">
-            <div class="col-md-2"></div>
-            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-            <div class="col-md-2"></div>
-        </div>
-        {{ form_label(form.textmailnew) }}
-        {{ form_widget(form.textmailnew) }}
+                <br><br><br>
 
-        <br><br><br>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                    <div class="col-md-2"></div>
+                </div>
+                {{ form_label(form.textmailrefuse) }}
+                {{ form_widget(form.textmailrefuse) }}
+                <br><br><br>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                    <div class="col-md-2"></div>
+                </div>
+                {{ form_label(form.textmailwalid) }}
+                {{ form_widget(form.textmailwalid) }}
+                <br><br><br>
 
-        <div class="row">
-            <div class="col-md-2"></div>
-            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-            <div class="col-md-2"></div>
-        </div>
-        {{ form_label(form.textmailrefuse) }}
-        {{ form_widget(form.textmailrefuse) }}
-        <br><br><br>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-            <div class="col-md-2"></div>
-        </div>
-        {{ form_label(form.textmailwalid) }}
-        {{ form_widget(form.textmailwalid) }}
-        <br><br><br>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                    <div class="col-md-2"></div>
+                </div>
+                {{ form_label(form.message) }}
+                {{ form_widget(form.message) }}
+                <br>
+                <br>
+            </div>
+            <div class="tab-pane fade" id="visa">
+                <br>
+                <label class="underline">Disposition du cartouche visa</label>
+                <br><br>
+                {{ form_widget(form.couleurVisa) }}
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="colorPicker">Couleur</label>
+                    </div>
+                        <div class="bfh-colorpicker col-md-3" id="colorPicker" data-name="colorpicker1" style="z-index: 1000">
+                        </div>
 
-        <div class="row">
-            <div class="col-md-2"></div>
-            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-            <div class="col-md-2"></div>
+                </div>
+                <br>
+                <label class="underline">Texte</label>
+                <br><br>
+                <div class="row">
+                    <div class="col-md-3">{{ form_label(form.titreVisa) }}</div>
+                    <div class="col-md-9">{{ form_widget(form.titreVisa) }}</div>
+                </div>
+                <br>
+                <br>
+            </div>
+
+            <div class="tab-pane fade" id="signature">
+                <br>
+                <label class="underline">Disposition de la signature</label>
+                <br><br>
+                <div class="row">
+                    <div class="col-md-3">{{ form_label(form.pageSignature) }}</div>
+                    <div class="col-md-9">{{ form_widget(form.pageSignature) }}</div>
+                </div>
+                <br>
+                <br>
+            </div>
         </div>
-        {{ form_label(form.message) }}
-        {{ form_widget(form.message) }}
-        <br>
-        <br>
+
         <div class="row">
             <div class="col-lg-3">
                 {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
@@ -78,7 +118,9 @@
     </div>
 
     <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap/css/bootstrap-formhelpers.min.css") }}"/>
     <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/js/bootstrap-formhelpers.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
     <script type="text/javascript">
@@ -86,5 +128,9 @@
 	    "image": false,
 	    locale: "fr-FR"
 	});
+        $('#colorPicker').on('change.bfhcolorpicker',function(){
+           $('#sesile_mainbundle_collectivite_couleurVisa').val($(this).val())
+            alert($('#sesile_mainbundle_collectivite_couleurVisa').val())
+        });
     </script>
 {% endblock %}
