--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -71,6 +71,11 @@
         </div>
         <br/>
 
+        <div class="label_form label-form-input">
+            {{ form_label(form.qualite) }}
+            {{ form_widget(form.qualite) }}
+        </div>
+        <br/>
         {#<div class="label_form parcou">
             {{ form_label(form.file) }}
             {{ form_widget(form.file) }}
@@ -96,6 +101,26 @@
             });
         </script>
 
+        <div class="label_form parcouSignature">
+
+            <label class="lbl_avatar">Signature</label>
+            <button type="button" class="btn_signature">
+                Choisir un fichier
+            </button>
+            <span class="nom_signature"></span>
+            {{ form_widget(form.fileSignature, { 'attr': {'class': 'parc_avatar'} }) }}
+        </div>
+        <script type="text/javascript">
+            $(".btn_signature").click(function () {
+               // alert('ta race');
+                $(".parcouSignature input[type='file']").trigger("click");
+            });
+
+            $(".parcouSignature input[type='file']").change(function (e) {
+                var nom_fichierSignature = e.target.files[0].name;
+                $('.nom_signature').text(nom_fichierSignature);
+            });
+        </script>
         <br/>
 
         <div class="label_form pickuser">
